[gd_scene load_steps=25 format=3 uid="uid://l62ub0kbh343"]

[ext_resource type="Script" uid="uid://874tnpm8fiel" path="res://Scripts/LevelLogic/Level4.gd" id="1_14dgs"]
[ext_resource type="PackedScene" path="res://Scenes/PlantScenes/PlantManager.tscn" id="2_dksml"]
[ext_resource type="PackedScene" uid="uid://dwihkqs25js7n" path="res://Scenes/ZombieScenes/ZombieSpawner.tscn" id="3_oh3ue"]
[ext_resource type="PackedScene" uid="uid://bteegsg6ig7de" path="res://Scenes/Systems/WavePreview.tscn" id="4_u6v5d"]
[ext_resource type="PackedScene" uid="uid://be6sbtmqr5d2f" path="res://Scenes/Systems/GridManager.tscn" id="5_b3suy"]
[ext_resource type="PackedScene" uid="uid://b6a02kdhke01v" path="res://Scenes/Systems/WaveManager.tscn" id="6_uv2tg"]
[ext_resource type="Script" uid="uid://c31n61qr27kvd" path="res://Scripts/LevelLogic/WaveManager_Lvl3.gd" id="7_ghmvw"]
[ext_resource type="AudioStream" uid="uid://ciau6lgnl27mt" path="res://Assets/Audio/SpookyBackGroundTrack.mp3" id="8_yn1uf"]
[ext_resource type="PackedScene" uid="uid://802bvw3m4n0a" path="res://Scenes/PlantScenes/PlantSelectionMenu.tscn" id="9_7dnwh"]
[ext_resource type="PackedScene" uid="uid://3ls67604vxxj" path="res://Scenes/Systems/ui_layer.tscn" id="10_g6tmb"]
[ext_resource type="Texture2D" uid="uid://df36u1f3ge5s6" path="res://Assets/Environment/Props/CoralSmallPROP.png" id="11_61i0t"]
[ext_resource type="Texture2D" uid="uid://der1qkybx4731" path="res://Assets/Environment/Props/CoralBigPROP.png" id="12_hw0r4"]
[ext_resource type="Texture2D" uid="uid://dcw0v1rjdfnn3" path="res://Assets/Environment/Props/Bramble1.png" id="13_371o1"]
[ext_resource type="Texture2D" uid="uid://d0ircqae1knpw" path="res://Assets/Environment/Props/Bramble2PROP.png" id="14_mk2l3"]
[ext_resource type="PackedScene" path="res://Scenes/Environment/Fish.tscn" id="15_tg2a8"]
[ext_resource type="PackedScene" path="res://Scenes/Environment/Shrub.tscn" id="16_y7sef"]
[ext_resource type="Texture2D" uid="uid://c6s44b8xrpg2b" path="res://Assets/Environment/BloodTree.png" id="17_qq0hm"]
[ext_resource type="Texture2D" uid="uid://ek4nru0b3wax" path="res://Assets/Environment/Props/EyeStalkPROP-Sheet.png" id="18_dmrma"]
[ext_resource type="PackedScene" uid="uid://cgkc7lr4bmh7r" path="res://Scenes/Systems/ToolTips.tscn" id="19_pa053"]

[sub_resource type="Environment" id="2"]
background_mode = 4
glow_enabled = true
glow_blend_mode = 1
glow_hdr_threshold = 1.5
adjustment_enabled = true

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("18_dmrma")
region = Rect2(0, 0, 32, 41)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("18_dmrma")
region = Rect2(32, 0, 32, 41)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("18_dmrma")
region = Rect2(64, 0, 32, 41)

[sub_resource type="SpriteFrames" id="6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="Level4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_14dgs")

[node name="PlantManager" parent="." instance=ExtResource("2_dksml")]
sun_points = 650

[node name="GameLayer" type="Node2D" parent="."]
z_index = 1

[node name="ZombieSpawner1" parent="GameLayer" instance=ExtResource("3_oh3ue")]
position = Vector2(747, 77)
Round1_Zombies = {
"Base": 1,
"BucketHead": 1,
"ConeHead": 1,
"Dancer": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round2_Zombies = {
"Base": 2,
"BucketHead": 2,
"ConeHead": 2,
"Dancer": 1,
"PoleVault": 2,
"ScreenDoor": 2,
"Ticker": 2
}
Round3_Zombies = {
"Base": 1,
"BucketHead": 1,
"ConeHead": 1,
"Dancer": 0,
"PoleVault": 1,
"ScreenDoor": 1,
"Ticker": 1
}

[node name="WavePreview" parent="GameLayer/ZombieSpawner1" instance=ExtResource("4_u6v5d")]
z_index = 1
position = Vector2(-37, 0)

[node name="ZombieSpawner2" parent="GameLayer" instance=ExtResource("3_oh3ue")]
position = Vector2(747, 109)
Round1_Zombies = {
"Base": 1,
"BucketHead": 0,
"ConeHead": 0,
"Dancer": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round2_Zombies = {
"Base": 2,
"BucketHead": 2,
"ConeHead": 2,
"Dancer": 0,
"PoleVault": 2,
"ScreenDoor": 2,
"Ticker": 2
}
Round3_Zombies = {
"Base": 1,
"BucketHead": 1,
"ConeHead": 1,
"Dancer": 0,
"PoleVault": 1,
"ScreenDoor": 1,
"Ticker": 1
}

[node name="WavePreview" parent="GameLayer/ZombieSpawner2" instance=ExtResource("4_u6v5d")]
z_index = 1
position = Vector2(-36, 1)

[node name="ZombieSpawner3" parent="GameLayer" instance=ExtResource("3_oh3ue")]
position = Vector2(747, 143)
Round1_Zombies = {
"Base": 0,
"BucketHead": 1,
"ConeHead": 0,
"Dancer": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round2_Zombies = {
"Base": 2,
"BucketHead": 2,
"ConeHead": 2,
"Dancer": 0,
"PoleVault": 2,
"ScreenDoor": 2,
"Ticker": 2
}
Round3_Zombies = {
"Base": 1,
"BucketHead": 1,
"ConeHead": 1,
"Dancer": 0,
"PoleVault": 1,
"ScreenDoor": 1,
"Ticker": 1
}

[node name="WavePreview" parent="GameLayer/ZombieSpawner3" instance=ExtResource("4_u6v5d")]
z_index = 1
position = Vector2(-38, 1)

[node name="ZombieSpawner4" parent="GameLayer" instance=ExtResource("3_oh3ue")]
position = Vector2(751, 174)
Round1_Zombies = {
"Base": 0,
"BucketHead": 0,
"ConeHead": 0,
"Dancer": 1,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round2_Zombies = {
"Base": 2,
"BucketHead": 2,
"ConeHead": 2,
"Dancer": 0,
"PoleVault": 2,
"ScreenDoor": 2,
"Ticker": 2
}
Round3_Zombies = {
"Base": 1,
"BucketHead": 1,
"ConeHead": 1,
"Dancer": 0,
"PoleVault": 1,
"ScreenDoor": 1,
"Ticker": 1
}
waveDelay = 1.2

[node name="WavePreview" parent="GameLayer/ZombieSpawner4" instance=ExtResource("4_u6v5d")]
z_index = 1
position = Vector2(-41, -1)

[node name="ZombieSpawner5" parent="GameLayer" instance=ExtResource("3_oh3ue")]
position = Vector2(754, 207)
Round1_Zombies = {
"Base": 1,
"BucketHead": 1,
"ConeHead": 1,
"Dancer": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round2_Zombies = {
"Base": 2,
"BucketHead": 2,
"ConeHead": 2,
"Dancer": 1,
"PoleVault": 2,
"ScreenDoor": 2,
"Ticker": 2
}
Round3_Zombies = {
"Base": 1,
"BucketHead": 1,
"ConeHead": 1,
"Dancer": 0,
"PoleVault": 1,
"ScreenDoor": 1,
"Ticker": 1
}

[node name="WavePreview" parent="GameLayer/ZombieSpawner5" instance=ExtResource("4_u6v5d")]
z_index = 1
position = Vector2(-41, -1)

[node name="GridManager" parent="GameLayer" instance=ExtResource("5_b3suy")]
z_index = -2

[node name="WaveManager" parent="GameLayer" instance=ExtResource("6_uv2tg")]
z_index = 1
position = Vector2(-59, 222)
script = ExtResource("7_ghmvw")
StartDelay = 0
Wave2StartTime = 45
Wave3StartTime = 75
Wave1_Interval = 2.0
Wave2_Interval = 4
Wave3_Interval = 2.0
canStartGame = true

[node name="Glow" type="ColorRect" parent="GameLayer"]
offset_left = 741.0
offset_top = 40.0
offset_right = 779.0
offset_bottom = 238.0
color = Color(2, 0, 0, 0.729412)

[node name="BackGroundMuisc" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_yn1uf")
volume_db = -80.0
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("2")

[node name="PlantSelectionMenu" parent="." instance=ExtResource("9_7dnwh")]
layout_mode = 1
offset_left = 25.0
offset_top = 313.0
offset_right = 65.0
offset_bottom = 353.0
scale = Vector2(0.5, 0.5)

[node name="UILayer" parent="." instance=ExtResource("10_g6tmb")]

[node name="Node2D" type="Node2D" parent="."]
visible = false
z_index = -1
position = Vector2(2, 0)

[node name="ColorRect" type="ColorRect" parent="Node2D"]
offset_left = -42.0
offset_top = -58.0
offset_right = 806.0
offset_bottom = 444.0
mouse_filter = 2
color = Color(0, 0, 0, 0.0784314)

[node name="Environment" type="Node2D" parent="."]

[node name="Coral" type="Node2D" parent="Environment"]

[node name="CoralSmallProp" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(532, 366)
texture = ExtResource("11_61i0t")

[node name="CoralSmallProp3" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(532, 366)
texture = ExtResource("11_61i0t")

[node name="CoralSmallProp2" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(588, 308)
texture = ExtResource("11_61i0t")
flip_h = true

[node name="CoralSmallProp4" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(644, 380)
texture = ExtResource("11_61i0t")
flip_h = true

[node name="CoralSmallProp5" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(690, 312)
texture = ExtResource("11_61i0t")

[node name="CoralSmallProp6" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(406, 379)
texture = ExtResource("11_61i0t")

[node name="CoralSmallProp8" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(116, 396)
texture = ExtResource("11_61i0t")

[node name="CoralSmallProp9" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(268, 47)
texture = ExtResource("11_61i0t")
flip_h = true

[node name="CoralSmallProp10" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(513, 45)
texture = ExtResource("11_61i0t")

[node name="CoralSmallProp7" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(413, 382)
scale = Vector2(-0.0526316, 1)
texture = ExtResource("11_61i0t")

[node name="CoralBigProp" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(617, 324)
texture = ExtResource("12_hw0r4")

[node name="CoralBigProp2" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(631, 332)
texture = ExtResource("12_hw0r4")
flip_h = true

[node name="CoralBigProp3" type="Sprite2D" parent="Environment/Coral"]
position = Vector2(613, 343)
texture = ExtResource("12_hw0r4")
flip_h = true

[node name="Bramble" type="Node2D" parent="Environment"]

[node name="Bramble1" type="Sprite2D" parent="Environment/Bramble"]
position = Vector2(505, 328)
texture = ExtResource("13_371o1")

[node name="BrambleSmall" type="Sprite2D" parent="Environment/Bramble"]
position = Vector2(366, 316)
texture = ExtResource("14_mk2l3")
flip_h = true

[node name="BrambleSmall2" type="Sprite2D" parent="Environment/Bramble"]
position = Vector2(455, 331)
texture = ExtResource("14_mk2l3")
flip_h = true

[node name="BrambleSmall3" type="Sprite2D" parent="Environment/Bramble"]
position = Vector2(402, 343)
texture = ExtResource("14_mk2l3")

[node name="BrambleSmall4" type="Sprite2D" parent="Environment/Bramble"]
position = Vector2(377, 389)
texture = ExtResource("14_mk2l3")
flip_h = true

[node name="Fish" type="Node2D" parent="Environment"]

[node name="Fish" parent="Environment/Fish" instance=ExtResource("15_tg2a8")]
z_index = -1
position = Vector2(595, 351)

[node name="Fish2" parent="Environment/Fish" instance=ExtResource("15_tg2a8")]
z_index = -1
position = Vector2(636, 315)

[node name="Fish3" parent="Environment/Fish" instance=ExtResource("15_tg2a8")]
z_index = -1
position = Vector2(680, 364)

[node name="Fish4" parent="Environment/Fish" instance=ExtResource("15_tg2a8")]
z_index = -1
position = Vector2(638, 346)

[node name="Shrubs" type="Node2D" parent="Environment"]

[node name="Shrub" parent="Environment/Shrubs" instance=ExtResource("16_y7sef")]
position = Vector2(552, 40)
scale = Vector2(1, 1)

[node name="Trees" type="Node2D" parent="Environment"]

[node name="BloodTree" type="Sprite2D" parent="Environment/Trees"]
z_index = 1
position = Vector2(317, 335)
texture = ExtResource("17_qq0hm")

[node name="BloodTree2" type="Sprite2D" parent="Environment/Trees"]
z_index = 1
position = Vector2(100, 16)
texture = ExtResource("17_qq0hm")

[node name="Special" type="Node2D" parent="Environment"]

[node name="EyeStalk" type="AnimatedSprite2D" parent="Environment/Special"]
position = Vector2(587, 387)
sprite_frames = SubResource("6")
flip_h = true

[node name="ToolTips" parent="." instance=ExtResource("19_pa053")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -152.0
offset_right = 152.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
